--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,42 @@ html{
 
 .container {
     text-align: center;
+    
   }
 
 .dot {
 height: 400px;
 width: 400px;
-background-color: #0c3751;
+border: 2px solid;
 border-radius: 50%;
 display: inline-block;
 left:200px;
 top:200px
+}
+
+.slide:hover,
+.slide:focus {
+  box-shadow: inset 6.5em 0 0 0 var(--hover);
+}
+
+button {  
+  color: var(--color);
+  transition: 0.25s;
+  
+  &:hover,
+  &:focus { 
+    border-color: var(--hover);
+    color: #ffa260;
+  }
+}
+
+button {
+  background: none;
+  border: 2px solid;
+  font: inherit;
+  line-height: 1;
+  margin: 0.5em;
+  padding: 1em 2em;
 }
 
 .circular--portrait {
@@ -25,8 +51,55 @@ width: 370px;
 height: 370px; 
 overflow: hidden; 
 border-radius: 50%; 
-left:507.5px;
-top:-388px
+left:50px;
+top:-58px
 } 
 
-.circular--portrait img { width: 100%; height: auto; margin-left:10px; margin-top: -90px;}
+.circular--portrait img { width: 100%; height: auto; margin-left:0px; margin-top: -90px;}
+
+h1::before {  
+  transform: scaleX(0);
+  transform-origin: bottom right;
+}
+
+h1:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+h1::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  inset: 0 0 0 0;
+  background: hsl(200 100% 80%);
+  z-index: -1;
+  transition: transform .3s ease;
+}
+
+h1 {
+  position: relative;
+  font-size: 5rem;
+}
+
+html {
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+body {
+  min-block-size: 100%;
+  min-inline-size: 100%;
+  margin: 0;
+  box-sizing: border-box;
+  display: grid;
+  place-content: center;
+  font-family: system-ui, sans-serif;
+}
+
+@media (orientation: landscape) {
+  body {
+    grid-auto-flow: column;
+  }
+}
